<resources>
    <string name="app_name">pokecardApp</string>
    <string name="server_client_id">550451927601-nsd97t4r5fm8e6iu6r2vei3l7eq7r9fp.apps.googleusercontent.com</string>
    <string name="facebook_app_id">749987178674848</string>
    <string name="fb_login_protocol_scheme">fb749987178674848</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="adapter_sets_list_title">Sets title</string>
    <string name="adapter_sets_list_description">Description</string>
    <string name="adapter_sets_list_realese_date">Realese date</string>
    <string name="adapter_sets_list_number_card">Nb card</string>
    <string name="adapter_sets_list_imageview">Sets image</string>
    <string name="login_hint_text_password">Mot de passe</string>
    <string name="login_hint_text_password_confirm">Confirmer votre Mot de passe</string>
    <string name="login_hint_text_email">Email</string>
    <string name="login_text_connexion">CONNEXION</string>
    <string name="login_text_signup">S\'INSCRIRE</string>
    <string name="bottom_navigation_search">Rechercher</string>
    <string name="bottom_navigation_my_sets">Mes decks</string>
    <string name="bottom_navigation_vs">Combat</string>
    <string name="bottom_navigation_ranking">Classement</string>
    <string name="bottom_navigation_account">Mon compte</string>
    <string name="meilleurs_joueurs">Meilleurs joueurs</string>
</resources>
