<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="190dp"
        android:layout_marginStart="@dimen/adapter_sets_list_margin_cardview"
        android:layout_marginTop="@dimen/adapter_sets_list_margin_cardview"
        android:layout_marginEnd="@dimen/adapter_sets_list_margin_cardview"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/adapter_sets_list_imageview"
                android:layout_width="250dp"
                android:layout_height="75dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="@dimen/adapter_sets_list_margin_start_end_image_view"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="@dimen/adapter_sets_list_margin_start_end_image_view"
                android:contentDescription="@string/adapter_sets_list_imageview"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/adapter_sets_list_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/adapter_sets_list_margin_start_end_title"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="@dimen/adapter_sets_list_margin_start_end_title"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/adapter_sets_list_title"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/adapter_sets_list_imageview" />

            <TextView
                android:id="@+id/adapter_sets_list_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/adapter_sets_list_margin_start_end_description"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="@dimen/adapter_sets_list_margin_start_end_description"
                android:gravity="center"
                android:maxLines="2"
                android:text="@string/adapter_sets_list_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/adapter_sets_list_title" />

            <TextView
                android:id="@+id/adapter_sets_list_release_date"
                style="@style/SetsListAdapterTextConnerBottom"
                android:layout_marginStart="8dp"
                android:text="@string/adapter_sets_list_realese_date"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/adapter_sets_list_number_card"
                style="@style/SetsListAdapterTextConnerBottom"
                android:layout_marginEnd="8dp"
                android:text="@string/adapter_sets_list_number_card"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>