<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_background_color"
    tools:layout_editor_absoluteY="25dp">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameSignUpField"
        style="@style/LoginTextField"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        app:hintTextAppearance="@style/LoginEditTextHint"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <EditText
            style="@style/LoginInputText"
            android:hint="@string/login_hint_text_email"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/login_placeholder_color"
            android:theme="@style/LoginMyEditText" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordSignUpField"
        style="@style/LoginTextField"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        app:hintTextAppearance="@style/LoginEditTextHint"
        app:layout_constraintBottom_toTopOf="@+id/confirmPasswordField"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/usernameSignUpField">

        <EditText
            style="@style/LoginInputText"
            android:hint="@string/login_hint_text_password"
            android:inputType="textPassword"
            android:textColorHint="@color/login_placeholder_color"
            android:theme="@style/LoginMyEditText" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirmPasswordField"
        style="@style/LoginTextField"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:hintTextAppearance="@style/LoginEditTextHint"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/passwordSignUpField">

        <EditText
            style="@style/LoginInputText"
            android:hint="@string/login_hint_text_password_confirm"
            android:inputType="textPassword"
            android:textColorHint="@color/login_placeholder_color"
            android:theme="@style/LoginMyEditText" />

    </com.google.android.material.textfield.TextInputLayout>


    <ImageView
        android:id="@+id/imageView2"
        style="@style/LoginImageView"
        android:layout_marginStart="64dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/usernameSignUpField"
        app:srcCompat="@drawable/ic_email" />

    <ImageView
        android:id="@+id/imageView5"
        style="@style/LoginImageView"
        android:layout_marginStart="64dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/confirmPasswordField"
        app:srcCompat="@drawable/ic_lock" />

    <ImageView
        android:id="@+id/imageView6"
        style="@style/LoginImageView"
        android:layout_marginStart="64dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/passwordSignUpField"
        app:srcCompat="@drawable/ic_lock" />


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="200dp"
        android:layout_height="250dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/pokecardapp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:text="Inscription"
        android:textColor="@color/text_signup"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/usernameSignUpField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/buttonSignUpActivity"
        style="@style/LoginButton"
        android:layout_height="46dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_radius"
        android:text="@string/login_text_signup"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />


</androidx.constraintlayout.widget.ConstraintLayout>