<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_background_color"
    tools:layout_editor_absoluteY="25dp">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameField"
        style="@style/LoginTextField"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:hintTextAppearance="@style/LoginEditTextHint"
        app:layout_constraintBottom_toTopOf="@+id/passwordField"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView4">

        <EditText
            style="@style/LoginInputText"
            android:hint="@string/login_hint_text_email"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/login_placeholder_color"
            android:theme="@style/LoginMyEditText" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordField"
        style="@style/LoginTextField"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:hintTextAppearance="@style/LoginEditTextHint"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/usernameField">

        <EditText
            style="@style/LoginInputText"
            android:hint="@string/login_hint_text_password"
            android:inputType="textPassword"
            android:textColorHint="@color/login_placeholder_color"
            android:theme="@style/LoginMyEditText" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonConnectWithEmail"
        style="@style/LoginButton"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_radius"
        android:text="@string/login_text_connexion"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/buttonConnectionWithGoogle"
        style="@style/LoginButton"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonConnectionWithFb" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/buttonConnectionWithFb"
        style="@style/LoginButton"
        android:layout_marginTop="24dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />


    <ImageView
        android:id="@+id/imageView2"
        style="@style/LoginImageView"
        android:layout_marginStart="64dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/usernameField"
        app:srcCompat="@drawable/ic_email" />

    <ImageView
        android:id="@+id/imageView5"
        style="@style/LoginImageView"
        android:layout_marginStart="64dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/passwordField"
        app:srcCompat="@drawable/ic_lock" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/usernameField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/pokecardapp" />

    <Button
        android:id="@+id/buttonSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@null"
        android:text="Premier connexion ?"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonConnectWithEmail" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@color/line_separator"
        app:layout_constraintBottom_toTopOf="@+id/buttonConnectionWithFb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSignup" />


</androidx.constraintlayout.widget.ConstraintLayout>